# pangolisp

./: Cargo.toml  README.md
src/: .#exprs.rs  compactor.rs  eval.rs  exprs.rs  forms.rs  lib.rs  lists.rs  main.rs  parser.rs  reader.rs  spans.rs  stack.rs  tokens.rs  vm.rs
