[package]
name = "pangolisp"
version = "0.1.0"
authors = ["James Laver <james.laver@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# fringe = "1.2.1"
im = {name = "im-rc", version = "15"}
# ordered-float = "2.0.1"
lasso = "0.4.1" # symbol interning

# logging
slog = "2.7.0"
slog-term = "2.6.0"
slog-async = "2.6.0"


# thiserror = "1.0"
